--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,8 @@ python-frontmatter>=1.0.0
 faiss-cpu>=1.7.4
 rich>=13.4.2
 requests>=2.31.0
+# Dependencies for file type support
+python-docx>=0.8.11
+pypdf>=3.15.1
+pandas>=2.0.0
+asciidoc3>=3.2.2
