--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,8 @@ pypdf>=3.15.1
 pandas>=2.0.0
 asciidoc3>=3.2.2
 GitPython>=3.1.40
+# Web server dependencies
+fastapi>=0.104.0
+uvicorn>=0.24.0
+websockets>=12.0
+jinja2>=3.1.0
